fixes to header on mobile

--- a/src/components/BlogLogo/BlogLogo.css
+++ b/src/components/BlogLogo/BlogLogo.css
@@ -22,7 +22,7 @@
     margin-left: 5px;
     text-align: center;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 400;
     text-transform: uppercase;
     line-height: 35px;
     white-space: nowrap;
@@ -46,7 +46,7 @@
 
 @media only screen and (max-width: 500px) {
     .blog-logo {
-        padding: 5px;
+        padding: 0;
     }
 
     .blog-logo img {
